Clicking Preset doesn't change the settings immediately #62325

Closed
opened 2019-03-07 18:06:15 +01:00 by Sebastian Koenig · 30 comments

System Information
Operating system: elementaryOS 0.4.1,
Graphics card: GTX 1080

Blender Version
Broken: 280, ed24315c63
Worked: 2.79
Short description of error
If you click on a preset menu entry to change e.g. the sampling settings, nothing happens. The values only update when you close the popup. So while you are clicking the different menu entries you think nothing happens and the presets are broken.

Exact steps for others to reproduce the error
Open startup file, change Render Engine to Cycles.
Click on the presets icon and choose one of the menu entries. Nothing seems to happen when you click. Maybe not technically a bug, but still feels super buggy ;)

**System Information** Operating system: elementaryOS 0.4.1, Graphics card: GTX 1080 **Blender Version** Broken: 280, ed24315c6309 Worked: 2.79 **Short description of error** If you click on a preset menu entry to change e.g. the sampling settings, nothing happens. The values only update when you close the popup. So while you are clicking the different menu entries you think nothing happens and the presets are broken. **Exact steps for others to reproduce the error** Open startup file, change Render Engine to Cycles. Click on the presets icon and choose one of the menu entries. Nothing seems to happen when you click. Maybe not technically a bug, but still feels super buggy ;)
Author
Member

Added subscriber: @sebastian_k

Added subscriber: @sebastian_k

#87206 was marked as duplicate of this issue

#87206 was marked as duplicate of this issue

#78908 was marked as duplicate of this issue

#78908 was marked as duplicate of this issue

#68154 was marked as duplicate of this issue

#68154 was marked as duplicate of this issue

#67750 was marked as duplicate of this issue

#67750 was marked as duplicate of this issue

#66029 was marked as duplicate of this issue

#66029 was marked as duplicate of this issue

#63299 was marked as duplicate of this issue

#63299 was marked as duplicate of this issue
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

checking...

checking...

Added subscriber: @bliblubli

Added subscriber: @bliblubli

Note that in some scene, even closing the popup doesn't help. In the classroom scene, you have to click on the scene name and then validate to get the presets to apply.

bug preset classroom.png

Note that in some scene, even closing the popup doesn't help. In the classroom scene, you have to click on the scene name and then validate to get the presets to apply. ![bug preset classroom.png](https://archive.blender.org/developer/F6913242/bug_preset_classroom.png)

Added subscriber: @ThomasFreye

Added subscriber: @ThomasFreye

Added subscriber: @sambler

Added subscriber: @sambler

Most presets work (now) a few don't.

Failing :-
Cycles sampling
Cycles Light paths
Fluid viscosity

Camera Safe areas - This refreshes the first time a preset is selected and then fails.

Maybe a little off topic, the hair dynamics panel has presets, the icon does not show until you enable hair dynamics, after that it stays visible while enabling/disabling.

Most presets work (now) a few don't. Failing :- Cycles sampling Cycles Light paths Fluid viscosity Camera Safe areas - This refreshes the first time a preset is selected and then fails. Maybe a little off topic, the hair dynamics panel has presets, the icon does not show until you enable hair dynamics, after that it stays visible while enabling/disabling.

Added subscribers: @popqjp, @brecht, @WilliamReynish

Added subscribers: @popqjp, @brecht, @WilliamReynish
Member

Added subscriber: @Fishy

Added subscriber: @Fishy
Member

Added subscribers: @APEC, @lichtwerk

Added subscribers: @APEC, @lichtwerk
Member

Added subscriber: @Imaginer

Added subscriber: @Imaginer
Member

Added subscriber: @Lumpengnom-3

Added subscriber: @Lumpengnom-3

This issue was referenced by 1b6752e599

This issue was referenced by 1b6752e599b5ed70823d09f90c418e448516d4b4

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2021-10-15 19:00:32 +02:00

This issue was referenced by 5c961b3b58

This issue was referenced by 5c961b3b582f77f9f7e9fa99476217753c424d32

Changed status from 'Resolved' to: 'Confirmed'

Changed status from 'Resolved' to: 'Confirmed'

Fixed reverted because it caused constant redraws.

Fixed reverted because it caused constant redraws.

Added subscriber: @SteffenD

Added subscriber: @SteffenD

Added subscribers: @mont29, @ideasman42

Added subscribers: @mont29, @ideasman42

@ideasman42, @mont29, maybe you guys have some advice for how best to solve this.

The issue here is that currently RNA properties created by add-ons do not always get depsgraph updates or window redraws. It happens when they are edited through a button, but not through a Python script, including presets.

By enabling those kinds of updates we get constant redraws, since this then also includes operator properties which are set all the time while drawing the UI. Likely there are also add-ons that update other types of properties while redrawing.

I can think of a few solutions for this:

  1. Do not solve the core issue right now, and work around it in Cycles presets by changing some other datablock property that will trigger a depsgraph update.
  2. Add an opt-in flag to RNA properties to indicate if they require a depsgraph update.
  3. Add an opt-in flag to RNA properties to indicate if they require a depsgraph update, but always do the depsgraph update when edited through a button for backwards compatibility.
  4. Always update, with some exceptions that are known to be updated on redraws (workspace/screen/windowmanager owner ID?).

I'm tempted to go with (1) and postpone this problem, since I'm not really sure what the proper update/redraw mechanism would look like. A flag as in (2) or (3) feels not fine grained enough so could be another intermediate solution, and I'm not so happy to break compatibility until we have a proper solution. (4) is likely to cause hidden performance issues with some add-ons.

@ideasman42, @mont29, maybe you guys have some advice for how best to solve this. The issue here is that currently RNA properties created by add-ons do not always get depsgraph updates or window redraws. It happens when they are edited through a button, but not through a Python script, including presets. By enabling those kinds of updates we get constant redraws, since this then also includes operator properties which are set all the time while drawing the UI. Likely there are also add-ons that update other types of properties while redrawing. I can think of a few solutions for this: 1. Do not solve the core issue right now, and work around it in Cycles presets by changing some other datablock property that will trigger a depsgraph update. 2. Add an opt-in flag to RNA properties to indicate if they require a depsgraph update. 3. Add an opt-in flag to RNA properties to indicate if they require a depsgraph update, but always do the depsgraph update when edited through a button for backwards compatibility. 4. Always update, with some exceptions that are known to be updated on redraws (workspace/screen/windowmanager owner ID?). I'm tempted to go with (1) and postpone this problem, since I'm not really sure what the proper update/redraw mechanism would look like. A flag as in (2) or (3) feels not fine grained enough so could be another intermediate solution, and I'm not so happy to break compatibility until we have a proper solution. (4) is likely to cause hidden performance issues with some add-ons.

The issue is also documented in #74000 (Property controlled drivers not updating from python) e.g. (where it was suggested to manually tag for updates from python code).

On the long run I would go for solution 2? Would match internal C-defined properties.

But for now, I think a workaround as suggested in solution 1 would be acceptable yes, a proper solution would need time to be properly designed.

The issue is also documented in #74000 (Property controlled drivers not updating from python) e.g. (where it was suggested to manually tag for updates from python code). On the long run I would go for solution 2? Would match internal C-defined properties. But for now, I think a workaround as suggested in solution 1 would be acceptable yes, a proper solution would need time to be properly designed.

This issue was referenced by 4f15c24705

This issue was referenced by 4f15c247052b6db49b5226b6c473bdb7b2be6293

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
10 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62325
No description provided.