Fix T62325, T91990: changing Cycles presets does not update the Blender UI

Checking RNA_MAGIC is not enough to identify the ID property case which always
needs updates. If the property is already resolved to an RNA property we need
to check the flag too.