source/blender/makesrna/intern/rna_access.c
@@ -2199,7 +2199,11 @@ static void rna_property_update(
  * but this isn't likely to be a performance problem. */
 bool RNA_property_update_check(PropertyRNA *prop)
 {
-  return (prop->magic != RNA_MAGIC || prop->update || prop->noteflag);
+  return
+      /* Always update ID properties. */
+      (prop->magic != RNA_MAGIC || (prop->flag & PROP_IDPROPERTY)) ||
+      /* For native RNA properties only update if there is a callback or notifier. */
+      (prop->update || prop->noteflag);
 }
 
 void RNA_property_update(bContext *C, PointerRNA *ptr, PropertyRNA *prop)
